@@ -1,6 +1,10 @@
-@comment $NetBSD: PLIST,v 1.2 2005/10/23 23:04:00 rillig Exp $
+@comment $NetBSD: PLIST,v 1.3 2006/03/02 22:58:56 hubertf Exp $
 bin/xdaemon
 bin/xdaemon2
+bin/xnetbsd-flag
+bin/xnetbsd-flag2
 share/doc/xdaemon.README
 share/xteddy/xdaemon.png
 share/xteddy/xdaemon2.png
+share/xteddy/xnetbsd-flag.png
+share/xteddy/xnetbsd-flag2.png
